<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".details.SoundDetailsDialog">

    <data>

        <variable
            name="viewModel"
            type="org.github.overtane.soundbrowser.details.SoundDetailsViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:singleLine="true"
            android:text="@string/sound_details"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/details_dialog"
            app:layout_constraintEnd_toStartOf="@+id/details_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/details_close"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_close"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/details_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/details_title"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/close_dialog" />


        <ProgressBar
            android:id="@+id/details_loading_wheel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_title">

            <TextView
                android:id="@+id/details_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:linksClickable="true"
                android:singleLine="true"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/details_table"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:soundLink="@{viewModel.details}" />

            <TableLayout
                android:id="@+id/details_table"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_name">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:text="@string/sample_rate" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/duration" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_samplerate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{viewModel.details.samplerate + ` Hz`}"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{viewModel.details.duration + ` s`}"
                        android:textStyle="bold" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/channels" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/bit_depth" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_channels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@{viewModel.details.channels}"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_bitdepth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@{viewModel.details.bitdepth}"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/license" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/uploader" />
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/details_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/creative_commons_0"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:singleLine="true"
                        android:text="@{viewModel.details.username}"
                        android:textStyle="bold" />
                </TableRow>

        </TableLayout>

            <Button
                android:id="@+id/details_play_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> viewModel.onPlayButtonClicked()}"
                android:text="@string/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_table" />

            <Button
                android:id="@+id/details_use_sound_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/use_sound"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_play_button"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>